--- a/client_web/Dockerfile
+++ b/client_web/Dockerfile
@@ -10,20 +10,19 @@ RUN mkdir -p /etc/nginx/ssl && \
     -addext "subjectAltName = DNS:localhost" && \
     chmod 644 /etc/nginx/ssl/certificate.crt /etc/nginx/ssl/private.key
 
-###----------------------- Build stage -----------------------###
-FROM node:20-alpine AS builder
+###----------------------- Development stage -----------------------###
+FROM node:20-alpine
 
 WORKDIR /app
 
+# Copy package files and public directory with assets
 COPY package*.json ./
+COPY public/ ./public/
 
+# Install dependencies for development
 RUN npm install
 
-COPY . .
-
-###----------------------- Development stage -----------------------###
-FROM builder AS development
-
+# Install mkcert for development SSL
 RUN apk add --no-cache \
     nss-tools \
     curl \
@@ -36,7 +35,9 @@ RUN apk add --no-cache \
     && chmod +x mkcert-v*-linux-amd64 \
     && cp mkcert-v*-linux-amd64 /usr/local/bin/mkcert
 
+# Environment variables
 ENV NODE_ENV=development
 EXPOSE ${VITE_PORT}
 
+# Start development server with hot reload and SSL
 CMD ["sh", "-c", "if [ ! -f localhost-key.pem ]; then mkcert -install && mkcert localhost; fi && mv localhost*.pem /app/ && npm run dev -- --host"]
