--- a/config/deployment.yml
+++ b/config/deployment.yml
@@ -212,6 +212,13 @@ spec:
             name: area-config
         - secretRef:
             name: area-secrets
+        resources:
+          requests:
+            memory: "128Mi"
+            cpu: "100m"
+          limits:
+            memory: "256Mi"
+            cpu: "200m"
       volumes:
       - name: mobile-builds
         persistentVolumeClaim:
