--- a/client_web/Dockerfile.prod
+++ b/client_web/Dockerfile.prod
@@ -14,36 +14,21 @@ RUN mkdir -p /etc/nginx/ssl && \
 FROM node:20-alpine AS builder
 
 WORKDIR /app
-
-# Copy package files
 COPY package*.json ./
-
-# Install dependencies
-RUN npm install
-
-# Copy the rest of the application including public directory
 COPY . .
 
-# Build the application
+RUN npm ci
 RUN npm run build
 
 ###----------------------- Production stage -----------------------###
-FROM node:20-alpine
+FROM nginx:alpine
 
-WORKDIR /app
+RUN mkdir -p /etc/nginx/ssl
 
-# Copy built files and necessary runtime files
-COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/public ./public
-COPY --from=builder /app/package*.json ./
-COPY --from=builder /app/vite.config.ts ./
+COPY --from=builder /app/dist /usr/share/nginx/html
+COPY --from=cert-builder /etc/nginx/ssl /etc/nginx/ssl
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Install only production dependencies
-RUN npm ci --only=production
+EXPOSE 8081
 
-# Environment variables
-ENV NODE_ENV=production
-EXPOSE ${VITE_PORT}
-
-# Start production server
-CMD ["npm", "run", "preview", "--", "--host"] 
+CMD ["nginx", "-g", "daemon off;"]
