--- a/client_web/Dockerfile.prod
+++ b/client_web/Dockerfile.prod
@@ -18,10 +18,29 @@ COPY package*.json ./
 COPY . .
 
 RUN npm ci
+
+RUN apk add --no-cache \
+    nss-tools \
+    curl \
+    && for i in $(seq 1 5); do \
+    curl -JLO "https://dl.filippo.io/mkcert/latest?for=linux/amd64" && break || \
+    if [ $i -eq 5 ]; then exit 1; fi && \
+    echo "Attempt $i failed! Retrying in 15 seconds..." && \
+    sleep 15; \
+    done \
+    && chmod +x mkcert-v*-linux-amd64 \
+    && cp mkcert-v*-linux-amd64 /usr/local/bin/mkcert
+
+RUN mkcert -install
+RUN mkcert localhost
+
 RUN npm run build
 
 ###----------------------- Production stage -----------------------###
 FROM nginx:alpine
+
+# Install curl for healthcheck
+RUN apk add --no-cache curl
 
 RUN mkdir -p /etc/nginx/ssl
 
