--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -61,7 +61,9 @@ jobs:
 
       - name: Run tests
         working-directory: ./server
-        run: go test ./... -v -coverprofile=coverage.out
+        env:
+          TARGET_PACKAGES: "AREA/internal/utils AREA/internal/services AREA/internal/config"
+        run: go test -v -coverprofile=coverage.out $TARGET_PACKAGES
 
       - name: Display test coverage
         working-directory: ./server
@@ -76,7 +78,7 @@ jobs:
 
 
   build:
-    needs: [test-client-web, test-server]
+    needs: [ test-client-web, test-server ]
     if: ${{ !contains(github.event.head_commit.message, 'WIP') && !contains(github.event.head_commit.message, 'wip') }}
     runs-on: ubuntu-latest
     environment: docker-build
