--- a/client_mobile/pubspec.yaml
+++ b/client_mobile/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.2
   simple_animations: ^5.1.0
   shimmer: ^3.0.0
+  intl: ^0.20.1
 
 dev_dependencies:
   flutter_test:
