--- a/client_mobile/pubspec.yaml
+++ b/client_mobile/pubspec.yaml
@@ -28,7 +28,8 @@ dependencies:
   flutter_launcher_icons: ^0.14.2
   simple_animations: ^5.1.0
   shimmer: ^3.0.0
-  intl: ^0.20.1
+  intl: any
+  restart_app: ^1.3.2
 
 dev_dependencies:
   flutter_test:
@@ -37,6 +38,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 
 flutter:
+  generate: true
   uses-material-design: true
   assets:
     - .env
